ext/mysqlnd/mysqlnd_priv.h
@@ -18,7 +18,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: mysqlnd_priv.h,v 1.4.2.10 2008/02/11 14:48:04 andrey Exp $ */
+/* $Id: mysqlnd_priv.h,v 1.4.2.11 2008/03/18 16:57:31 andrey Exp $ */
 
 #ifndef MYSQLND_PRIV_H
 #define MYSQLND_PRIV_H
@@ -148,9 +148,9 @@
 
 #define SET_CLIENT_ERROR(error_info, a, b, c) \
 	{ \
-		error_info.error_no = a; \
-		strlcpy(error_info.sqlstate, b, sizeof(error_info.sqlstate)); \
-		strlcpy(error_info.error, c, sizeof(error_info.error)); \
+		error_info.error_no = (a); \
+		strlcpy(error_info.sqlstate, (b), sizeof(error_info.sqlstate)); \
+		strlcpy(error_info.error, (c), sizeof(error_info.error)); \
 	}
 
 #define SET_STMT_ERROR(stmt, a, b, c)	SET_CLIENT_ERROR(stmt->error_info, a, b, c)
